--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-Flask==0.9
+Flask==0.10.1
+Flask-Babel==0.9
+Flask-Login==0.2.11
+Flask-Mail==0.9.1
+Flask-OpenID==1.2.4
+Flask-SQLAlchemy==2.0
+Flask-WhooshAlchemy==0.56
+Flask-WTF==0.12
+gunicorn==19.3.0
+Jinja2==2.7.3
+WTForms==2.0.2
+Werkzeug==0.8.3
